--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-agrupamento_de_seletores_e_pseudoclasses2.css
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-agrupamento_de_seletores_e_pseudoclasses2.css
@@ -16,9 +16,38 @@ div:nth-of-type(3) {
 }
 
 div:nth-of-type(4) {
-  background-color: rgb(12, 87, 43);
+  background-color: rgb(27, 44, 34);
 }
 
 div:nth-of-type(5) {
-  background-color: rgb(159, 219, 120);
+  background-color: rgb(209, 238, 189);
+}
+
+div:nth-of-type(odd) h3 {
+  font-style: italic;
+}
+
+div:nth-of-type(1) h3 {
+  color: aqua;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+div:nth-of-type(2) h3 {
+  color: rgb(71, 28, 55);
+  font-family: monospace, serif;
+}
+
+div:nth-of-type(3) h3 {
+  color:rgb(158, 223, 39);
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+div:nth-of-type(4) h3 {
+  color: rgb(255, 255, 255);
+  font-family: cursive, fantasy, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+div:nth-of-type(5) h3 {
+  color: rgb(71, 28, 55);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
