Faça todas as tags Header (h1, h2...) possuírem cor de fonte vermelha e, se alguma delas estiver em itálico, aumente seu tamanho para 40px e acrescente uma borda de 1px preta e sólida.

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
@@ -9,3 +9,13 @@ ol li:nth-of-type(even) {
 ol li:nth-of-type(odd) {
   text-transform: uppercase;
 }
+
+.header {
+  color: red;
+}
+
+.header em {
+  size: 40px;
+  border: 1px black solid;
+}
+
