4 - Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir "java*" no texto, utilize uma cor de fundo rosa.

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
@@ -26,3 +26,15 @@ li {
 li em {
   font-weight: bold;
 }
+
+ul.programming-list li:first-child {
+  color: blue;
+}
+
+.blue {
+  color: blue;
+}
+
+.java {
+  background-color:pink;
+}
