--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
@@ -36,5 +36,35 @@ ul.programming-list li:first-child {
 }
 
 .java {
-  background-color:pink;
+  background-color: pink;
+}
+
+ul.links li:hover {
+  font-weight: bold;
+}
+
+/* dessa forma nao deu certo, dai fiz usando classes :( */
+
+/* ul.links li a:nth-child(1):hover {
+  color: orange;
+} */
+
+.stack a:hover  {
+  color: orange;
+}
+
+.w3:hover  {
+  color: green;
+}
+
+.mdn:hover  {
+  color: black;
+}
+
+.dev:hover {
+  color: yellow;
+}
+
+.trybe a:hover {
+  color: green;
 }
