junta modificacoes bonus da mesma cor

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style-classes_descendentes.css
@@ -53,7 +53,7 @@ ul.links li:hover {
   color: orange;
 }
 
-.w3:hover  {
+.w3:hover, .trybe a:hover  {
   color: green;
 }
 
@@ -63,8 +63,4 @@ ul.links li:hover {
 
 .dev:hover {
   color: yellow;
-}
-
-.trybe a:hover {
-  color: green;
 }
