--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/ex01.css
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/ex01.css
@@ -1,12 +1,13 @@
-body {
-  margin: 5px;
-}
 section {
   margin: 10px;
 }
 h1 {
   text-align: center;
 }
-p {
+p, div {
   margin: 7px;
+  margin-left: 10px;
+}
+h2 {
+  margin: 30px 10px 20px 15px;
 }
