entrega req 2 - Adicione uma propriedade Flexbox que modifique a ordem em que a logomarca e os itens do menu aparecem na tela.

--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
@@ -12,6 +12,8 @@ body {
 .header-container {
   background-color: #5C687C;
   display: flex;
+  flex-flow: row-reverse;
+  justify-content: flex-end;
 }
 
 .logo-container {
@@ -39,4 +41,6 @@ body {
   margin-right: 10px;
 }
 
-/* 1 - Adicione uma propriedade que defina o tamanho Flexbox base para o container da imagem 268px e para o container do menu 500px .  */
+/* 1 - Adicione uma propriedade que defina o tamanho Flexbox base para o container da imagem 268px e para o container do menu 500px .
+
+2 - Adicione uma propriedade Flexbox que modifique a ordem em que a logomarca e os itens do menu aparecem na tela. */
