--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
@@ -43,10 +43,64 @@ body {
   margin-right: 10px;
 }
 
-/* 1 - Adicione uma propriedade que defina o tamanho Flexbox base para o container da imagem 268px e para o container do menu 500px .
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.movie-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.movie-container h2 {
+  margin: 40px 0;
+  text-align: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card-container div {
+  align-items: center;
+  background-color: #5C687C;
+  border: black solid 1px;
+  display: flex;
+  height: 150px;
+  justify-content: center;
+  margin: 10px;
+}
+
+.aside-container {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  flex-basis: 350px;
+}
+
+.aside-container h3, h4 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.aside-container p {
+  margin: 10px 0;
+  text-align: justify;
+}
+
+/* 
+                      Parte 1
+1 - Adicione uma propriedade que defina o tamanho Flexbox base para o container da imagem 268px e para o container do menu 500px .
 
 2 - Adicione uma propriedade Flexbox que modifique a ordem em que a logomarca e os itens do menu aparecem na tela. 
 
 3 - Adicione uma propriedade Flexbox que faça o container do menu crescer, quando houver espaço disponível.  
 
-4 - Utilize a propriedade align-self no elemento correto para que o header da página tenha o seguinte comportamento: (imagem que mostra o menu centralizado)*/
+4 - Utilize a propriedade align-self no elemento correto para que o header da página tenha o seguinte comportamento: (imagem que mostra o menu centralizado)
+
+                     Parte 2
+1 - Aplique uma base de 350px para seu container aside .                      
+*/
