--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
@@ -79,6 +79,8 @@ body {
   flex-direction: column;
   margin: 20px;
   flex-basis: 350px;
+  flex-grow: 1;
+  align-self: center;
 }
 
 .aside-container h3, h4 {
@@ -88,7 +90,7 @@ body {
 
 .aside-container p {
   margin: 10px 0;
-  text-align: justify;
+  text-align: justify;  
 }
 
 /* 
@@ -102,5 +104,13 @@ body {
 4 - Utilize a propriedade align-self no elemento correto para que o header da página tenha o seguinte comportamento: (imagem que mostra o menu centralizado)
 
                      Parte 2
-1 - Aplique uma base de 350px para seu container aside .                      
+1 - Aplique uma base de 350px para seu container aside . 
+
+2 - Aplique um alinhamento para centralizar e outro para expandir. 
+
+3 - Adicione uma propriedade que faça com que seu container de filmes tenha uma base de 700px e outra base de 16% para as div do container de seu card. 
+
+4 - Aplique uma propriedade com o valor 10 que expanda o container de filmes. Deve ficar similar a imagem abaixo:
+
+5 - Adicione uma propriedade com o valor 1 que faça com que suas div do container de filmes ocupe todo o espaço em branco.
 */
