--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/ex01.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Ubuntu';
+  font-family: "Ubuntu";
 }
 
 body {
@@ -10,7 +10,7 @@ body {
 }
 
 .header-container {
-  background-color: #5C687C;
+  background-color: #5c687c;
   display: flex;
 }
 
@@ -18,7 +18,7 @@ body {
   display: flex;
   justify-content: center;
   flex-basis: 268px;
-  order:1;
+  order: 1;
 }
 
 .menu-container {
@@ -63,18 +63,19 @@ body {
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .card-container div {
   align-items: center;
-  background-color: #5C687C;
+  background-color: #5c687c;
   border: black solid 1px;
   display: flex;
   height: 150px;
   justify-content: center;
   margin: 10px;
   flex-basis: 16%;
+  flex-grow: 1;
 }
 
 .aside-container {
@@ -86,14 +87,15 @@ body {
   align-self: center;
 }
 
-.aside-container h3, h4 {
+.aside-container h3,
+h4 {
   margin-bottom: 10px;
   text-align: center;
 }
 
 .aside-container p {
   margin: 10px 0;
-  text-align: justify;  
+  text-align: justify;
 }
 
 /* 
