--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/fix01.css
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/fix01.css
@@ -71,3 +71,15 @@ p strong {
     display: block;
   }  
 }
+
+@media screen and (min-width:600px) and (max-width:1000px) {
+  .card:nth-of-type(2) {
+    display: block;
+  }  
+}
+
+@media screen and (min-width:950px) , (max-width:650px) {
+  .card:nth-of-type(3) {
+    display: block;
+  }  
+}
