adiciona um pouco de margin na pagina

--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise1.css
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise1.css
@@ -1,15 +1,18 @@
 body {
  font-size: 1.7rem;
+ margin: 5px
 }
+
 h1 {
  font-size: 2rem;
 }
+
 h2 {
 
 }
 
 img {
-    max-width: 100%;
+    max-width: 97%;
     margin: 35px 5px 2px 5px;
 }
 
