rick and morty, counter e dadjoke finalizados

--- a/2-front-end/bloco-12-ciclo-de-vida-de-componentes-e-react-router/dia-1-ciclo-de-vida-de-componentes/dad-jokes-lifecycle/src/rickAndMorty/RickAndMorty.css
+++ b/2-front-end/bloco-12-ciclo-de-vida-de-componentes-e-react-router/dia-1-ciclo-de-vida-de-componentes/dad-jokes-lifecycle/src/rickAndMorty/RickAndMorty.css
@@ -1,5 +1,5 @@
 
-.App {
+.RickAndMorty {
   background-size: cover;
   background: linear-gradient(-45deg,#0b0c0c,  #125269, #125269, #0b0c0c);
   color: white;
